Make navbar's position: fixed on mobile

--- a/src/projects800.css
+++ b/src/projects800.css
@@ -19,7 +19,7 @@ body {
 
 .navbar {
     height: 3em;
-    position: absolute;
+    position: fixed;
     z-index: 1000;
     width: 100vw;
     overflow-x: hidden;
